[gd_scene load_steps=5 format=3 uid="uid://45i1on7bkk3u"]

[ext_resource type="Script" uid="uid://blletq4do04k3" path="res://scripts/corCorreta.gd" id="1_hruif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hruif"]
bg_color = Color(0.09803922, 0.09803922, 0.09803922, 0.78431374)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm70u"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kcdh"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CorCorreta" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 254.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hruif")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -355.0
offset_right = 190.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hruif")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -144.5
offset_right = 75.0
offset_bottom = -94.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Cor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorButtons" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -67.5
offset_right = 155.0
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonEsquerda" type="Button" parent="Panel/ColorButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sm70u")
text = "Vermelho"

[node name="ButtonDireita" type="Button" parent="Panel/ColorButtons"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_sm70u")
text = "Azul"

[node name="ButtonCima" type="Button" parent="Panel/ColorButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1kcdh")
text = "Verde"

[node name="ButtonBaixo" type="Button" parent="Panel/ColorButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_sm70u")
text = "Amarelo"
